noinst_LTLIBRARIES = libRivetProjections.la
libRivetProjections_la_SOURCES = \
  Beam.cc \
  BeamThrust.cc \
  ChargedFinalState.cc \
  ChargedLeptons.cc \
  CentralEtHCM.cc \
  DISDiffHadron.cc \
  DISFinalState.cc \
  DISKinematics.cc \
  DISLepton.cc \
  DISRapidityGap.cc \
  DressedLeptons.cc \
  FastJets.cc \
  PxConePlugin.cc \
  FinalPartons.cc \
  FinalState.cc \
  FParameter.cc \
  GammaGammaFinalState.cc \
  GammaGammaKinematics.cc \
  GammaGammaLeptons.cc \
  HadronicFinalState.cc \
  HeavyHadrons.cc \
  Hemispheres.cc \
  HepMCHeavyIon.cc \
  IdentifiedFinalState.cc \
  InitialQuarks.cc \
  InvMassFinalState.cc \
  JetFinder.cc \
  JetShape.cc \
  LeadingParticlesFinalState.cc \
  MergedFinalState.cc \
  MissingMomentum.cc \
  NeutralFinalState.cc \
  NonHadronicFinalState.cc \
  NonPromptFinalState.cc \
  ParisiTensor.cc \
  ParticleFinder.cc \
  PrimaryHadrons.cc \
  PrimaryParticles.cc \
  PromptFinalState.cc \
  Sphericity.cc \
  Spherocity.cc \
  TauFinder.cc \
  Thrust.cc \
  TriggerCDFRun0Run1.cc \
  TriggerCDFRun2.cc \
  TriggerUA5.cc \
  UnstableFinalState.cc \
  UndressBeamLeptons.cc \
  VetoedFinalState.cc \
  VisibleFinalState.cc \
  WFinder.cc \
  ZFinder.cc
