noinst_LTLIBRARIES = libRivetNsubjettiness.la

libRivetNsubjettiness_la_SOURCES = \
  Nsubjettiness.cc \
  Njettiness.cc \
  NjettinessPlugin.cc \
  XConePlugin.cc \
  MeasureDefinition.cc \
  ExtraRecombiners.cc \
  AxesDefinition.cc \
  TauComponents.cc

libRivetNsubjettiness_la_CPPFLAGS = $(AM_CPPFLAGS) -I${top_srcdir}/include/Rivet/Tools/fjcontrib
