noinst_LTLIBRARIES = libRivetRecursiveTools.la

libRivetRecursiveTools_la_SOURCES = \
  BottomUpSoftDrop.cc \
  IteratedSoftDrop.cc \
  ModifiedMassDropTagger.cc \
  Recluster.cc \
  RecursiveSoftDrop.cc \
  RecursiveSymmetryCutBase.cc \
  SoftDrop.cc

libRivetRecursiveTools_la_CPPFLAGS = -I${top_srcdir}/include/Rivet/Tools/fjcontrib $(AM_CPPFLAGS)
